@@ -3556,7 +3556,8 @@ static void process_monster(int Ind, int m_idx)
 			if (p_ptr->mon_vis[m_idx] &&
 			    (p_ptr->disturb_move ||
 			     (p_ptr->mon_los[m_idx] &&
-			      p_ptr->disturb_near)))
+			      p_ptr->disturb_near)) &&
+				r_ptr->d_char != 't')
 			{
 				/* Disturb */
                                 if (p_ptr->id != m_ptr->owner) disturb(Ind, 0, 0);
